objects/sixsense__X6sense_Account_Score__c.object
<CustomObject>
    <description>Custom object to capture the 6sense Account Scores for existing 6sense accounts.</description>
    <fields>
        <fullName>sixsense__AccountProductKey__c</fullName>
        <externalId>true</externalId>
        <label>AccountProductKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__CompanyProductKey__c</fullName>
        <externalId>true</externalId>
        <label>CompanyProductKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__Company_ID__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Numerical_Reach_Score__c</fullName>
        <label>Numerical Reach Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Orphaned__c</fullName>
        <formula>OR(
    ISBLANK(sixsense__account_id__c),
    NOT(CONTAINS(sixsense__AccountProductKey__c, sixsense__account_id__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphaned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__Previous_Buying_Stage__c</fullName>
        <description>Previous Buying stage for notification posting</description>
        <label>Previous Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__ProductId__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>sixsense__X6sense_Product__c</referenceTo>
        <relationshipLabel>6sense Account Scores</relationshipLabel>
        <relationshipName>X6sense_Account_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_Name__c</fullName>
        <description>Plain text name for the product related to this score.</description>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__ProfileScore__c</fullName>
        <label>Profile Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__QueuedForProcessing__c</fullName>
        <externalId>true</externalId>
        <label>Queued For Processing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Reach_Score__c</fullName>
        <label>Reach Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Stage_Changed__c</fullName>
        <description>Returns Checked if buying stage is different from previous buying stage</description>
        <formula>IF(AND(sixsense__buying_stage__c != null, sixsense__Previous_Buying_Stage__c != null,
            sixsense__buying_stage__c != sixsense__Previous_Buying_Stage__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns Checked if buying stage is different from previous buying stage</inlineHelpText>
        <label>Stage Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__Txn_Id__c</fullName>
        <label>Txn Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Updated__c</fullName>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sixsense__X6QA_Age_in_Days__c</fullName>
        <label>6QA Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__X6QA_End_Date__c</fullName>
        <label>6QA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sixsense__X6QA_Start_Date__c</fullName>
        <label>6QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sixsense__X6QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>6QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__account_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>6sense Predictive Intelligence - Accounts</relationshipLabel>
        <relationshipName>X6sense_Account_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__buying_stage__c</fullName>
        <label>Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__intent_score__c</fullName>
        <label>Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__profile_fit__c</fullName>
        <label>Profile Fit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__segment_names__c</fullName>
        <label>Segment Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>6sense Account Score</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <columns>NAME</columns>
        <columns>sixsense__account_id__c</columns>
        <columns>sixsense__profile_fit__c</columns>
        <columns>sixsense__intent_score__c</columns>
        <columns>sixsense__buying_stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sixsense__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Account Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>